# zanzibar

./: Cargo.toml
src/: game.rs  main.rs  player.rs  setup.rs
tests/: cli.rs
