[package]
name = "zanzibar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.0", features = ["derive"]}
inquire = "0.5.2"
dialoguer = "0.10.2"
console = "0.15.2"
predicates = "2.1.1"
assert_cmd = "2.0.5"
rand = "0.8.5"
indexmap = "1.9.1"

